Add BASE_HREF test constant.  Add support for find component activities.